--- a/index.html
+++ b/index.html
@@ -17,10 +17,16 @@
 
 </body>
 
-<!-- Add 2 buttons -->
+<div class="btn-group">
+  <button class="button" onclick="updateVal(1)">DOW</button>
+  <button class="button" onclick="updateVal(2)">IXIC</button>
+  <button class="button" onclick="updateVal(3)">BitCoinUS</button>
+   <p>This is a monthly comparison visualization</p>
+</div>
+<!-- Add 2 buttons
 <button onclick="updateVal(1)">DOW</button>
 <button onclick="updateVal(2)">IXIC</button>
-<button onclick="updateVal(3)">BitCoinUS</button>
+<button onclick="updateVal(3)">BitCoinUS</button>  -->
 
 <!-- Create a div where the graph will take place -->
 <div id="graph"></div>
