--- a/index.html
+++ b/index.html
@@ -171,12 +171,15 @@
   var xAxis = d3.axisBottom().scale(x);
   svg.append("g")
     .attr("transform", "translate(0," + height + ")")
+   .text("Month")
     .attr("class", "myXaxis")
+  
 
   // Initialize an Y axis
   var y = d3.scaleLinear().range([height, 0]);
   var yAxis = d3.axisLeft().scale(y);
   svg.append("g")
+  .text("Month")
     .attr("class", "myYaxis")
 
   // Create a function that takes a dataset as input and update the plot:
