--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 
-<!-- Load d3.js -->
+<!-- Load d3.js -- Code library and few samples from D3js.org page>
 <script src="https://d3js.org/d3.v4.js"></script>
 <script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
 
@@ -11,15 +11,15 @@
 
 <body>
 
-  <h1>Post Covid Market Recovery Comparison</h1>
+  <h1>Post Covid Market Recovery Comparison in 2020</h1>
 
-  <p>This is a monthly comparison visualization</p>
+  <p>The 3 scenes compares the closing price across 3 markets DOW, Nasdaq and BitcoinUS</p>
 
 </body>
 
 <div class="btn-group">
   <button class="button" onclick="updateVal(1)">DOW</button>
-  <button class="button" onclick="updateVal(2)">IXIC</button>
+  <button class="button" onclick="updateVal(2)">Nasdaq</button>
   <button class="button" onclick="updateVal(3)">BitCoinUS</button>
    
 </div>
