--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </div>
 
 <div class="div-middle">
-  Annotation sample <b>
+  Use the slider to view the monthly data <b>
     <div id="annotation"></div>
   </b>
 </div>
