--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <h1>Post Covid Market Recovery Comparison in 2020</h1>
 
-  <p>The 3 scenes compares the closing price across 3 markets DOW, Nasdaq and BitcoinUS</p>
+  <p>The 3 scenes compares the closing price across 3 markets DOW, Nasdaq and BitcoinUS. Click on one of the buttons to view the closing price</p>
 
 </body>
 
@@ -21,7 +21,7 @@
   <button class="button" onclick="updateVal(1)">DOW</button>
   <button class="button" onclick="updateVal(2)">Nasdaq</button>
   <button class="button" onclick="updateVal(3)">BitCoinUS</button>
-   
+ <p>The 3 scenes compares the closing price across 3 markets DOW, Nasdaq and BitcoinUS. Click on one of the buttons to view the closing price</p>  
 </div>
 <!-- Add 2 buttons
 <button onclick="updateVal(1)">DOW</button>
