--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <h1>Post Covid Market Recovery Comparison in 2020</h1>
 
-  <p>The 3 scenes compares the closing price across 3 markets DOW, Nasdaq and BitcoinUS. Click on one of the buttons to view the closing price</p>
+  <p>The 3 scenes compares the closing price across 3 markets DOW, Nasdaq and BitcoinUS in 2020. Click on one of the buttons to view the closing price for each month</p>
 
 </body>
 
@@ -43,7 +43,7 @@
   <input type="range" min="1" max="12" step="1" id="month" defaultValue="1" onchange="onSliderValChange(this.value)">
 </div>
 <div id="graph"></div>
-<p>The 3 scenes compares the closing price across 3 markets DOW, Nasdaq and BitcoinUS. Click on one of the buttons to view the closing price</p>
+<p>The 3 scenes compares the closing price across 3 markets DOW, Nasdaq and BitcoinUS in 2020. Click on one of the buttons to view the closing price for each month</p>
 <script>
   var monthSelected = 1;
   var yearSelected = 2020;
