--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 </div>
 
 <div id="graph"></div>
-<p>The 3 scenes compares the closing price across 3 markets DOW, Nasdaq and BitcoinUS in 2020. Click on one of the buttons to view the closing price for each month</p>
+<p>Market trend shows a huge dip close to March 2020 and increase in price after September 2020. This clearly shows the impact of Covid outbreak in US in March.
+</p>
 <script>
   var monthSelected = 1;
   var yearSelected = 2020;
