--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <input type="range" min="1" max="12" step="1" id="month" defaultValue="1" onchange="onSliderValChange(this.value)">
 </div>
 <div class="div-middle">
-  Use the below slider to view the monthly closing price <b>
+  Use the above slider to view the monthly closing price <b>
     <div id="annotation"></div>
   </b>
 </div>
