--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <h1>Post Covid Market Recovery Comparison in 2020</h1>
 
-  <p>The 3 scenes compares the closing price across 3 markets DOW, Nasdaq and BitcoinUS in 2020. Click on one of the buttons to view the closing price for each month</p>
+  <p>The 3 scenes compares the closing price across 3 markets DOW, Nasdaq and BitcoinUS in 2020. <br/>Click on one of the buttons to view the closing price for each month</p>
 
 </body>
 
