--- a/index.html
+++ b/index.html
@@ -182,6 +182,8 @@
   var y = d3.scaleLinear().range([height, 0]);
   var yAxis = d3.axisLeft().scale(y);
   svg.append("g")
+  .append("text")
+      .attr("text-anchor", "end")
   .text("Month")
     .attr("class", "myYaxis")
 
