--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <!-- Create a div where the graph will take place -->
 
 
-
+<br>
 
 <div class="div-middle">
   <input type="range" min="1" max="12" step="1" id="month" defaultValue="1" onchange="onSliderValChange(this.value)">
@@ -43,7 +43,7 @@
 </div>
 
 <div id="graph"></div>
-<p>Market trend shows a huge dip close to March 2020 and increase in price after September 2020. This clearly shows the impact of Covid outbreak in US in March.
+<p>Market trend shows a huge dip close to March 2020 and a market recovery after September 2020. This clearly shows the impact of Covid outbreak in US in March.
 </p>
 <script>
   var monthSelected = 1;
