--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
 
 
 <br/>
+<br/>
 
 <div class="div-middle">
-  <input type="range" min="1" max="12" step="1" id="month" defaultValue="1" onchange="onSliderValChange(this.value)">
+  <input type="range" min="1" max="12" step="1" id="month" value="1" onchange="onSliderValChange(this.value)">
 </div>
 <div class="div-middle">
   Use the above slider to view the monthly closing price <b>
