--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </body>
 
-<div class="btn-group">
+<div>
   <button class="button" onclick="updateVal(1)">DOW</button>
   <button class="button" onclick="updateVal(2)">Nasdaq</button>
   <button class="button" onclick="updateVal(3)">BitCoinUS</button>
