--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
   function updateAnnotation() {
     var displayEl = document.getElementById("annotation");
-    displayEl.innerHTML = monthSelected + "/" + yearSelected;
+    displayEl.innerHTML = "Chart for " + annot  + "  " + monthSelected + "/" + yearSelected;
   }
 
   // filter data source and get the year and month data we need.
