--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <h1>Post Covid Market Recovery Comparison in 2020</h1>
 
-  <p>The 3 scenes compares the closing price across 3 markets DOW, Nasdaq and BitcoinUS in 2020. <br/>Click on one of the buttons to view the closing price for each month</p>
+  <p>The 3 scenes compares the closing price across 3 markets DOW, Nasdaq and BitcoinUS in 2020. <br/>Monthly closing price for each month</p>
 
 </body>
 
@@ -38,7 +38,7 @@
   <input type="range" min="1" max="12" step="1" id="month" value="1" onchange="onSliderValChange(this.value)">
 </div>
 <div class="div-middle">
-  Use the above slider to view the monthly closing price <b>
+ 2020 Monthly slider  <b>
     <div id="annotation"></div>
   </b>
 </div>
